app css updated with switchboard ids

--- a/my-front-end/app.css
+++ b/my-front-end/app.css
@@ -6,3 +6,84 @@ h1 {
   font-size: 80px;
   color: peachpuff;
 }
+
+#switchboard01 { 
+
+}
+
+#switchboard02 { 
+
+}
+
+#switchboard03 { 
+
+}
+
+#switchboard04 { 
+
+}
+
+#switchboard05 { 
+
+}
+
+#switchboard06 { 
+
+}
+
+#switchboard07 { 
+
+}
+
+#switchboard08 { 
+
+}
+
+#switchboard09 { 
+
+}
+
+#switchboard10 { 
+
+}
+
+#switchboard11 { 
+
+}
+
+#switchboard12 { 
+
+}
+
+#switchboard13 { 
+
+}
+
+#switchboard14 { 
+
+}  
+
+#switchboard15 { 
+
+}
+
+#switchboard16 { 
+
+}
+
+#switchboard17 {
+
+}
+
+#switchboard18 {
+
+}
+
+#switchboard19 { 
+
+}
+
+#switchboard20 { 
+  
+}
+
