--- a/my-front-end/app.css
+++ b/my-front-end/app.css
@@ -9,8 +9,8 @@ input [type="password"] {
 }
 
 table, th, td {
-  border: 1px solid black;
-  font-size: 40px;
+  /* border: 1px solid black; */
+  font-size: 50px;
 }
 
 
